<resources>

    <string name="app_name">开源学院</string>
    <string name="welcome">欢迎走进开源学院</string>
    <string name="author">作者：张国帅</string>
    <!--第三发控件-->
    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>
    <!--第三发控件-->

    <!--Message 我得信息-->
    <string name="message_Title">我的消息</string>

    <!--image-->
    <string name="image_back">返回</string>
    <string name="image_tiaoZhuan">跳转</string>

    <!--publicty 我关注的课程-->
    <string name="publicty_Title">我关注的课程</string>

    <!--contacts 通信录-->
    <string name="contacts_Title">好友</string>
    <string name="contacts_NewFriends">新的朋友</string>

    <!--Search Friends 查找新的用户-->
    <string name="search_friends_Title">搜索好友</string>

    <!--MyArticle 我的文章-->
    <string name="my_article_Title">我的文章</string>

    <!--setting 设置-->
    <string name="setting">设置</string>
    <string name="setting_User">Forever Love</string>
    <string name="setting_SheDingMuBiao">设定目标</string>
    <string name="setting_XuexiTiXing">学习提醒</string>
    <string name="setting_TuiSongTongZhi">推送通知</string>
    <string name="setting_QingChuHuanCun">清除缓存</string>
    <string name="setting_Video">允许非wifi网络播放/下载视频</string>
    <string name="setting_JingGao">请谨慎开启避免过度使用流量</string>
    <string name="setting_VideoPlay">视频自动播放</string>
    <string name="setting_YiJianFanKui">意见反馈</string>
    <string name="setting_BanBenGengXin">版本更新</string>
    <string name="setting_GeiWoPingFen">给我评分</string>
    <string name="setting_GuanYuApp">关于程序</string>
    <string name="setting_YingYongTuiJian">应用推荐</string>
    <string name="setting_TuiChu">退出登录</string>
    <string name="setting_HuanCunDaXiao">10.2MB</string>

    <!--Personal data 个人资料-->
    <string name="person_data_Title">个人资料</string>
    <string name="person_data_TouXiang">头像</string>
    <string name="person_data_ZhiYe">职业</string>
    <string name="person_data_QianMing">签名</string>
    <string name="person_data_NiCheng">昵称</string>
    <string name="person_data_XingBie">行别</string>
    <string name="person_data_DiQu">地区</string>
    <string name="person_data_BangDingShouJi">手机绑定</string>
    <string name="person_data_BangDingYouXiang">邮箱绑定</string>
    <string name="person_data_DefaultDate">未绑定</string>

</resources>
