<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@xml/popbackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/set_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/set_back"
            style="@style/TitlebackImageView"
            />

        <TextView
            style="@style/TitleTextView"
            android:text="@string/setting" />

    </LinearLayout>

    <com.kaiyuanxueyuan.view.MyScrollview
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_title">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:orientation="vertical">
           <LinearLayout
               android:id="@+id/personData"
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <com.kaiyuanxueyuan.view.RoundImageView
                   android:id="@+id/roundImage_two_border"
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:scaleType="centerCrop"
                   android:layout_gravity="center"
                   imagecontrol:border_inside_color="#fff7f2e9"
                   imagecontrol:border_outside_color="#ffd5d1c8"
                   imagecontrol:border_thickness="2dp"
                   android:src="@mipmap/one"/>

               <TextView
                  style="@style/SettingTextView"
                   android:text="@string/setting_User" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <View
               style="@style/OnLine"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_SheDingMuBiao" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_XuexiTiXing" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_TuiSongTongZhi"
                   />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <View
               style="@style/OnLine"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_QingChuHuanCun" />

               <Space
                   style="@style/MySpace"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:text="@string/setting_HuanCunDaXiao"
                   android:layout_gravity="center"
                   android:gravity="center"
                   />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:orientation="horizontal">

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <TextView
                       style="@style/SettingTextView"
                       android:text="@string/setting_Video" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/setting_JingGao"
                       android:textSize="14sp"
                       android:paddingStart="5dp"
                       android:paddingEnd="0dp"
                       android:textColor="@color/gravy"
                       android:paddingLeft="5dp"
                       android:paddingRight="0dp" />

               </LinearLayout>

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_VideoPlay" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <View
               style="@style/OnLine"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_YiJianFanKui" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_BanBenGengXin" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_GeiWoPingFen" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_GuanYuApp" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <View
               style="@style/OnLine"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/setting_height"
               android:orientation="horizontal">

               <TextView
                   style="@style/SettingTextView"
                   android:text="@string/setting_YingYongTuiJian" />

               <Space
                   style="@style/MySpace"/>

               <ImageView
                   style="@style/TiaoZhuanImageView"
                   />

           </LinearLayout>

           <Button
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:text="@string/setting_TuiChu"
               android:textSize="16sp"
               android:textColor="@color/red"
               android:background="#00000000"
               android:padding="10dp"
               />

       </LinearLayout>

    </com.kaiyuanxueyuan.view.MyScrollview>

</RelativeLayout>